* user interface
  - replay fast-forward
  - new waypoint location editor (#343)
  - show required glide ratio in waypoint details (#1573)
  - add airspace ack button to map item list (#2139)
  - additionally show airspace altitude in feet (#2379)
  - show more files in replay file picker (#2582)
  - clicking with Ctrl key pressed moves the simulator (#199)
* tasks
  - MAT tasks (#563)
  - custom symmetric quadrant (#2125)
  - AAT keyhole (#1687)
  - add AST point option "Score exit" (#2544)
  - optimise start point
  - allow up to 30 turn points in racing tasks
  - local time for task start open/close time (#2645)
* devices
  - Volkslogger: support IGC file download (#1972)
  - Volkslogger: declaration no longer erases waypoint database from logger
  - CAI302: support uploading all waypoint file types (#2054)
* Android
  - faster map renderer on some Android devices
* data
  - new polars for two G 102 Astir variants (#2701)

Version 6.5.3 - 2013/03/26
* user interface
  - eliminate flickering in the cross section on Windows
  - fix wrong radial display in target dialog
  - start at terrain center when there's no GPS fix and no home location
* task
  - fix line OZ rounding error (#2599)
* devices
  - FLARM: fix IGC file download on firmware 5.09 (#2619)
* Android
  - fix crash with Hebrew language
* Mac OS X
  - fix crash on startup (#2607, #2667)
  - show missing serial ports, hide internal devices (#2668)
* infoboxes
  - fix rendering of thermal assistant aircraft symbol (#2702)

Version 6.5.2 - 2013/03/15
* user interface
  - fix hang during startup (#2662, #2663)
  - fix freeze in dialogs (#2664)
  - automatically re-enable manual wind controls (#2336)
  - fix crash after connecting FLARM (#2669)

Version 6.5.1 - 2013/03/12
* infoboxes
  - fix MacCready adjustment for non-metric units (#2654)
* user interface
  - fix bogus "restart XCSoar" messages
  - fix cross section render error on some OpenGL chips (#2631, #2661)
  - allow gestures in cross section (#2655)