@@ -435,6 +435,7 @@ GlueMapWindow::Render(Canvas &canvas, const PixelRect &rc)
     DrawStallRatio(canvas, rc);
     DrawFlightMode(canvas, rc);
     DrawFinalGlide(canvas, rc);
+    DrawVario(canvas, rc);
     DrawGPSStatus(canvas, rc, Basic());
   }
 }
