@@ -25,6 +25,7 @@ Version 6.6 - not yet released
   - additionally show airspace altitude in feet (#2379)
   - show more files in replay file picker (#2582)
   - clicking with Ctrl key pressed moves the simulator (#199)
+  - vario bar at the right edge of the map
 * tasks
   - MAT tasks (#563)
   - custom symmetric quadrant (#2125)
